@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/mnemo",
     "description": "Notes application",
     "type": "horde-application",
@@ -17,44 +16,39 @@
             "role": "lead"
         }
     ],
-    "time": "2022-11-03",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://horde-satis.maintaina.com"
-        }
-    ],
+    "time": "2023-10-30",
+    "repositories": [],
     "require": {
-        "horde/horde-installer-plugin": "dev-FRAMEWORK_6_0 || ^2",
+        "horde/horde-installer-plugin": "^2",
         "php": "^7.4 || ^8",
-        "horde/content": "^3 || dev-FRAMEWORK_6_0",
-        "horde/horde": "^6 || dev-FRAMEWORK_6_0",
-        "horde/auth": "^3 || dev-FRAMEWORK_6_0",
-        "horde/core": "^3 || dev-FRAMEWORK_6_0",
-        "horde/data": "^3 || dev-FRAMEWORK_6_0",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
-        "horde/form": "^3 || dev-FRAMEWORK_6_0",
-        "horde/group": "^3 || dev-FRAMEWORK_6_0",
-        "horde/history": "^3 || dev-FRAMEWORK_6_0",
-        "horde/icalendar": "^3 || dev-FRAMEWORK_6_0",
-        "horde/injector": "^3 || dev-FRAMEWORK_6_0",
-        "horde/perms": "^3 || dev-FRAMEWORK_6_0",
-        "horde/prefs": "^3 || dev-FRAMEWORK_6_0",
-        "horde/share": "^3 || dev-FRAMEWORK_6_0",
-        "horde/support": "^3 || dev-FRAMEWORK_6_0",
-        "horde/text_filter": "^3 || dev-FRAMEWORK_6_0",
-        "horde/util": "^3 || dev-FRAMEWORK_6_0",
+        "horde/content": "^3",
+        "horde/horde": "^6",
+        "horde/auth": "^3",
+        "horde/core": "^3",
+        "horde/data": "^3",
+        "horde/exception": "^3",
+        "horde/form": "^3",
+        "horde/group": "^3",
+        "horde/history": "^3",
+        "horde/icalendar": "^3",
+        "horde/injector": "^3",
+        "horde/perms": "^3",
+        "horde/prefs": "^3",
+        "horde/share": "^3",
+        "horde/support": "^3",
+        "horde/text_filter": "^3",
+        "horde/util": "^3",
         "ext-gettext": "*"
     },
     "require-dev": {},
     "suggest": {
-        "horde/activesync": "^3 || dev-FRAMEWORK_6_0",
-        "horde/backup": "^2 || dev-FRAMEWORK_6_0",
-        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
-        "horde/crypt": "^3 || dev-FRAMEWORK_6_0",
-        "horde/db": "^3 || dev-FRAMEWORK_6_0",
-        "horde/pdf": "^3 || dev-FRAMEWORK_6_0",
-        "horde/test": "^3 || dev-FRAMEWORK_6_0"
+        "horde/activesync": "^3",
+        "horde/backup": "^2",
+        "horde/cli": "^3",
+        "horde/crypt": "^3",
+        "horde/db": "^3",
+        "horde/pdf": "^3",
+        "horde/test": "^3"
     },
     "autoload": {
         "psr-0": {
