@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2022-11-03
+  date: 2023-10-30
   license:
     identifier: ASL
     uri: http://www.horde.org/licenses/apache
-  notes: |+
-    
+  notes: |
+    [rla][bugf] Fix error screen after saving a note.
+    |+
 5.0.0alpha4:
   api: 5.0.0alpha1
   state:
