@@ -2,7 +2,8 @@
 v5.0.0alpha5
 ------------
 
-
+[rla][bugf] Fix error screen after saving a note.
+|+
 
 
 ------------
